@@ -14,6 +14,7 @@
 * kibana-dashboards.json was merged into kibana-graphs.json for easier import.
 * Syslog - Redone do gather logs synchronously. 
 * Running Commands - Now done synchronously.
+* Clean Docker - Now done synchronously.
 
 ## Bug Fixes:
 * None
